# fap

./: Cargo.toml  README.md
src/: app.rs  color_config.rs  main.rs  panic_guard.rs
