[package]
name = "fap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
is_executable = "1.0.1"
opener = "0.6.1"
path-absolutize = "3.1.1"
serde = "1.0.193"
unicode-segmentation = "1.10.1"
